--- a/projects/templates/projects.html
+++ b/projects/templates/projects.html
@@ -1,9 +1,9 @@
-{%extends 'base.html' %} {% load bootstrap5 %} {% load static %} {% block styles%} {{block.super}}
+{%extends 'base.html' %} {% load bootstrap4 %} {% load static %} {% block styles%} {{block.super}}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="{% static 'css/projects.css' %}"> {% endblock %} {% block content %}
 <div class="container">
-    <div id="random" class="min-vh-90" style="background: #222 url('https://unsplash.it/1920/1080/?random') center center no-repeat;;">
+    <div id="random" class="min-vh-90" style="background: black center center no-repeat;;">
         <h1>Rate & Get your project rated in terms of:</h1>
         <ol>
             <li>
@@ -33,7 +33,7 @@
             {% for pro in posts %}
             <div class="card col-md-3" style="width: 20rem;">
                 <a href="{% url 'image' pro.id%}">
-                    <img src="{{pro.image.url}}" data-target="#imageModal{{pro.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage" style="height: 200px; width: 1000px"></a>
+                    <img src="{{pro.project_image.url}}" data-target="#imageModal{{pro.id}}" data-toggle="modal" alt="" class="img-fluid" id="eachimage" style="height: 200px; width: 1000px"></a>
                 <div class="card-body">
 
                     <h5 class="card-title">{{pro.title}}</h5>
